# bank-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
(app/services/: transfer.py)
app/: config.py  database.py  models.py  security.py
app/core/: security.py
app/schemas/: account.py
tests/: conftest.py  test_auth.py
