[project]
name = "bank-api"
version = "0.1.0"
description = "A FastAPI-based banking service with user accounts, transactions, and transfers"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
